--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://doc-14-5g-docs.googleusercontent.com/docs/securesc/rt6q44tfcs6kv1et388q1af0av29b54l/oujf6sjl4d1kjnp4rjai709qv199icg8/1597721400000/00384981403615821050/00384981403615821050/10KSzHWIzCIL_ZBnorbpCuaQYvQuDQfwM?e=download&authuser=1&nonce=kuvmg9cubh6gu&user=00384981403615821050&hash=9cmu2ciluc5tn0innea41jgf0iajvdl8</string>
+                    <string>https://srv-file14.gofile.io/download/LMnXA7/SecondClone-Viewer.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
