--- a/is.plist
+++ b/is.plist
@@ -2,47 +2,46 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-   <key>items</key>
-   <array>
-       <dict>
-           <key>assets</key>
-           <array>
-               <dict>
-                   <key>kind</key>
-                   <string>software-package</string>
-                   <key>url</key>
-                   <string>https://srv-file4.gofile.io/download/EqkP1s/SecondClone-Viewer.ipa</string>
-               </dict>
-               <dict>
-                   <key>kind</key>
-                   <string>display-image</string>
-                   <key>needs-shine</key>
-                   <true/>
-                   <key>url</key>
-                   <string>https://my.secondclone.com/banner_secondclone.ico</string>
-               </dict>
-	       <dict>
-                   <key>kind</key>
-                   <string>full-size-image</string>
-                   <key>needs-shine</key>
-                   <true/>
-                   <key>url</key>
-                   <string>https://my.secondclone.com/banner_secondclone.ico</string>
-               </dict>
-           </array><key>metadata</key>
-           <dict>
-               <key>bundle-identifier</key>
-               <string>com.onebyte.scpviewerapp</string>
-               <key>bundle-version</key>
-               <string>1.0.0</string>
-               <key>kind</key>
-               <string>software</string>
-               <key>subtitle</key>
-               <string>SecondClone</string>
-               <key>title</key>
-               <string>SecondClone-Viewer</string>
-           </dict>
-       </dict>
-   </array>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>https://srv-file9.gofile.io/download/es65ST/testFunction.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>https://my.secondclone.com/banner_secondclone.ico</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>https://my.secondclone.com/banner_secondclone.ico</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.oncebyte.testfunctionscpa</string>
+				<key>bundle-version</key>
+				<string>1.0</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>title</key>
+				<string>testFunction</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
-</plist>  
+</plist>
