--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://srv-file9.gofile.io/download/es65ST/testFunction.ipa</string>
+					<string>https://srv-file16.gofile.io/download/zfbBRs/testFunction.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.oncebyte.testfunctionscpa</string>
+				<string>com.oncebyte.testfunctionscp</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
