--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://srv-file22.gofile.io/download/xWG2zo/testFunction.ipa</string>
+					<string>https://srv-file14.gofile.io/download/tysopM/SecondCloneNew.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,13 +33,13 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.oncebyte.testfunctionscp</string>
+				<string>com.onebyte.scpviewerapp</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>testFunction</string>
+				<string>SecondCloneNew</string>
 			</dict>
 		</dict>
 	</array>
