--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://srv-file12.gofile.io/download/qDEsMq/SecondClone.ipa</string>
+					<string>https://srv-file14.gofile.io/download/neGYDR/SecondClone-Viewer.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>SecondClone</string>
+				<string>SecondClone-Viewr</string>
 			</dict>
 		</dict>
 	</array>
