--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://srv-file14.gofile.io/download/neGYDR/SecondClone-Viewer.ipa</string>
+					<string>https://srv-file4.gofile.io/download/nWQTFR/SecondClone-Viewer.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://my.secondclone.com/banner_secondclone.ico</string>
+					<string>https://srv-file21.gofile.io/download/1iYkHf/logo_app.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://my.secondclone.com/banner_secondclone.ico</string>
+					<string>https://srv-file21.gofile.io/download/1iYkHf/logo_app.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>SecondClone-Viewr</string>
+				<string>SecondClone-Viewer</string>
 			</dict>
 		</dict>
 	</array>
