--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://srv-file7.gofile.io/download/nQ0GVJ/SecondClone.ipa</string>
+					<string>https://srv-file12.gofile.io/downloadStore/srv-store1/cbMZk2/SecondClone-Viewer.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>SecondClone-Viewer</string>
+				<string>SCP Viewer</string>
 			</dict>
 		</dict>
 	</array>
