--- a/is.plist
+++ b/is.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://store4.gofile.io/download/c628e271-2bcf-4180-b3a6-236157dd3627/BeMil_9100.ipa</string>
+					<string>http://bl02.files.pw:182/d/2tb2xqtsxtvho65uigh24tpnh2f5r4aiavcejnq56pjkrlyhvi5kwkuhgma5afln2wwugpwn/BeMil_9100.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://store1.gofile.io/download/8e8b0f2b-b03e-46d9-aa25-628c82eaa6ab/unnamed.png</string>
+					<string>http://bl02.files.pw:182/d/2tb3pqtsxtvho65uigh36qhyhmtjdgjd257iyhhs3pfjsgry2qgghssf5t4r6yl6p4bsp3d4/AppIcon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://store1.gofile.io/download/8e8b0f2b-b03e-46d9-aa25-628c82eaa6ab/unnamed.png</string>
+					<string>http://bl02.files.pw:182/d/2tb3pqtsxtvho65uigh36qhyhmtjdgjd257iyhhs3pfjsgry2qgghssf5t4r6yl6p4bsp3d4/AppIcon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
